--- a/backend/project-exam/.README.md
+++ b/backend/project-exam/.README.md
@@ -81,8 +81,8 @@ Health check endpoint to verify API is running.
 
 1. Clone the repository:
    ```bash
-   git clone https://github.com/yourusername/ethereum-api.git
-   cd ethereum-api
+   git clone https://github.com/MinhWalker/project-exam.git
+   cd backend/project-exam/
    ```
 
 2. Install dependencies:
